# schemarize

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
schemarize/: __init__.py  core.py  infer.py  readers.py  schema.py
tests/: test_infer.py  test_readers.py  test_schema.py
